2003-04-21  Andreas Kupries  <andreask@activestate.com>

	* installer.tcl: Made sure that all [file copy] operations use
	  -force. Fix for #719616.

2003-04-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* installer.tcl: Bug fix, the modules calendar, control, and math
	  have a "tclIndex" file which has to be installed too. Also
	  changed usage of 'tcl_pkgPath', as this variable does not exist
	  on windows.

2003-04-17  Andreas Kupries  <andreask@activestate.com>

	* configure.in: Switched over from the original build system
	* configure:    to one where configure/Makefile are optional
	* Makefile.in:  and delegating all real work to 'sak.tcl'.
	* INSTALL.txt:  Updated documentation, reduced configure macros.
	* aclocal.m4:
	* sak.tcl:
	* devdoc/releaseguide.html:

2003-04-17  Andreas Kupries  <andreask@activestate.com>

	* installer.tcl: Bug fixes in non-gui mode, added option to force
	  cmdline mode.
	
	* sak.tcl: Added command to invoke the testsuite(s).

	* installer.tcl: Added GUI.

	* main.tcl: New file, entrypoint for *kit, *pack, redirects to
	  'installer.tcl'.

	* sak.tcl: Helper tool for tcllib development (Generate
	  distribution, various forms of documentation, check the bundle
	  of packages for problems.

	* Makefile.in: Added des to the list of modules. (That is the good
	  thing which came out of the erroneous commit, we found this
	  error.)

	* mkIndex.tcl: Reverting accidential commit of this file. The
	  committed state works with a changed Makefile, but not with the
	  current one.

2003-04-16  Andreas Kupries  <andreask@activestate.com>

	* installer.tcl: Added 'des' to list. Reworked according to
	  feedback from Don.

	* tcllib_version.tcl: Added, for sharing with other scripts.

	* modules/stats/pkgIndex: Now throwing an error when trying to
	  load 'stats'.

	* modules/struct/ChangeLog: Typo correction.

2003-04-15  Andreas Kupries  <andreask@activestate.com>

	* installer.tcl: Added 'md4' to installer.tcl
